--- a/package.json
+++ b/package.json
@@ -1,1 +1,14 @@
 
+{
+  "name": "novaalert",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "discord.js": "^14.14.1",
+    "dotenv": "^16.3.1",
+    "mongoose": "^8.0.3"
+  }
+}
