--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
-
 {
-  "name": "novaalert",
+  "name": "announcement-bot",
   "version": "1.0.0",
+  "description": "Discord Scheduled Announcement Bot (No MongoDB)",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "deploy": "node deploy-commands.js"
   },
+  "keywords": [],
+  "author": "you",
+  "license": "ISC",
   "dependencies": {
     "discord.js": "^14.14.1",
-    "dotenv": "^16.3.1",
-    "mongoose": "^8.0.3"
+    "dotenv": "^16.3.1"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
